<resources>
    <string name="app_name">MensaApp</string>
    <string name="about_mensa">About Mensa</string>
    <string name="logo">Logo</string>
    <string name="about_mensa_romania">About Mensa</string>
    <string name="what_does_iq_mean">What Does IQ Mean</string>
    <string name="about_iq_test">About IQ Test</string>
    <string name="mensa_principles">Mensa Principles</string>
    <string name="take_free_sample_iq_test">Take Free Sample IQ Test</string>
    <string name="title_activity_about_mensa_international">AboutMensaInternational</string>
    <string name="about_mensa_text_1">
        "      Mensa was founded in England in 1946 by Roland Berrill, a barrister, and Dr. Lance Ware, a scientist and lawyer. They had the idea of forming a society for bright people, the only qualification for membership of which was a high IQ. The original aims were, as they are today, to create a society that is non-political and free from all racial or religious distinctions. The society welcomes people from every walk of life whose IQ is in the top 2% of the population, with the objective of enjoying each other's company and participating in a wide range of social and cultural activities.\n\n"

    </string>
    <string name="about_mensa_text_2">
        "      Mensa has three stated purposes: to identify and foster human intelligence for the benefit of humanity, to encourage research in the nature, characteristics and uses of intelligence, and to promote stimulating intellectual and social opportunities for its members.\n\n"

    </string>
    <string name="about_mensa_text_3">
        "      Today there are more than 140,000 Mensans in 100 countries throughout the world. There are active Mensa organizations in almost 50 countries, and on every continent except Antarctica. Membership numbers are also available for specific National Groups.\n\n"
    </string>
    <string name="about_mensa_text_4">
        "      There is simply no one prevailing characteristic of Mensa members other than high IQ. There are Mensans for whom Mensa provides a sense of family, and others for whom it is a casual social activity. There have been many marriages made in Mensa, but for many people, it is simply a stimulating opportunity for the mind. Most Mensans have a good sense of humor, and they like to talk. And, usually, they have a lot to say.\n\n"
        "      Mensans have ranged in age from 2 to more than 100, but most are between 20 and 60. In education they range from preschoolers to high school dropouts to people with multiple doctorates. There are Mensans on welfare and Mensans who are millionaires. As far as occupations, the range is staggering. Mensa has professors and truck drivers, scientists and firefighters, computer programmers and farmers, artists, military people, musicians, diplomats, manual workers, police officers, glassblowers—the diverse list goes on and on. There are famous Mensans and prize-winning Mensans, but there are many whose names you wouldn't know.\n\n"
    </string>
    <string name="about_mensa_text_5">
        "      The word "Mensa" means "table" in Latin. Mensa is a round-table society, where race, color, creed, national origin, age, politics, educational or social background are irrelevant.\n\n"
    </string>
    <string name="about_mensa_text_6">
        "      Mensa takes no stand on politics, religion or social issues. Mensa has members from so many different countries and cultures with differing points of view that for Mensa to espouse a particular point of view would go against its role as a forum for all points of view. Of course, individual Mensa members often have strong opinions—and several of them. It is said that in a room with 12 Mensans you will find at least 13 differing opinions on any given subject!\n\n"
    </string>
    <string name="about_mensa_text_7">
        "      Membership in Mensa is open to persons who have attained a score within the upper two percent of the general population on an approved intelligence test that has been properly administered and supervised. There is no other qualification for initial membership eligibility.\n\n"

        "      The term "IQ score" is widely used but poorly defined. There are a large number of tests with different scales. The result on one test of 132 can be the same as a score 148 on another test. Some intelligence tests don't use IQ scores at all. Mensa has set a percentile as cutoff to avoid this confusion. Candidates for membership of Mensa must achieve a score at or above the 98th percentile on a standard test of intelligence (a score that is greater than that achieved by 98 percent of the general population taking the test).\n\n"

        "      Generally, there are two ways to prove that you qualify for Mensa: either take a test administered by Mensa, or submit a qualifying test score from another approved test. There are a large number of intelligence tests that are "approved". More information on whether a test you have taken is approved, as well as information on the procedure for taking the Mensa test, can be obtained from the nearest Mensa office. Beware - there are no on-line tests that can be used for admission to Mensa.  Feel free to contact Mensa for specific details about eligibility.\n\n"

        "      Mensa has no other eligibility requirements other than IQ testing. However, many tests are not valid for people under the age of 16. You should contact the nearest Mensa office for more information.\n\n"
    </string>
    <string name="about_mensa_text_8">
        "      Contact the testing service that administered the test to you requesting that they send you a report showing your score. Include as much information as you can about yourself and regarding when and where you were tested. If you can't give an exact answer, an approximation is better than nothing. Many testing services charge a fee for sending reports; you should give the service a call before writing them.\n\n"

        "      If your school did IQ testing, write to the school you attended, and ask for a CERTIFIED copy of your score. It must include your birth date, the name of the test, and a clearly defined number, i.e., IQ, or percentile rank nationally. Mensa does not accept achievement tests. The school seal must be stamped on the report.\n\n"

        "      For psychologist/agency testing, have the report sent on professional letterhead, with the psychologist's or agency's license or registration number. Mensa accepts tests given only by those people qualified to do testing privately in the area in which the examiner resides. Date of test, name of test, and full score must be given, and the report must be signed.\n\n"

        "      Any signature-guaranteed or notarized copy of any of the reports will be accepted, other non-verifiable copies may be rejected.\n\n"

    </string>
    <string name="about_mensa_text_9">
        "      Mensa is a non-political High-IQ Society for bright people. Mensa is a round-table society ("Mensa" means "table" in Latin), where race, color, creed, national origin, age, politics, educational or social background are irrelevant. There is just one criterion for eligibility: an IQ equal to or greater than the 98th percentile on an internationally-standardised IQ test. Theoretically, one person in fifty is eligible to join. Mensa provides a forum for intellectual exchange among its members. These include the exchange of ideas through lectures, discussions, journals, special-interest groups, and local, regional, national and international gatherings; the investigations of members' opinions and attitudes; and, assistance to researchers, inside and outside Mensa, in projects dealing with intelligence or Mensa. Mensa also provides a more informal service. Its members serve as a critical but intelligent audience for new ideas propagated by other members.\n\n"
    </string>
    <string name="about_mensa_text_10">
        "      There are members in more than 100 countries around the world, and across all seven continents. Their ages are from 3 to 103. They are from all walks of life and educational levels; they include janitors, doctors, scientists, artists, actors, carpenters, chemists, politicians, farmers, computer programmers, authors, police officers, hermits, firemen, musicians, the long-term unemployed, educators, millionaires, firefighters, bankers and bus drivers. Members tend to be curious and have widely varying interests. They are quick to grasp concepts. They are often humorous, talkative, quirky, but the only characteristic they share across the board is a high IQ.\n\n"
    </string>
    <string name="what_is_iq_1">
        " What does IQ Mean\n\n"
        "IQ is a type of standard score that indicates how far above, or how far below, his/her peer group an individual stands in mental ability. The peer group score is an IQ of 100; this is obtained by applying the same test to huge numbers of people from all socio-economic strata of society, and taking the average.\n\n"
        "The term "IQ" was coined by the psychologist William Stern for the German term Intelligenzquotient in 1912. At that time, IQ was represented as a ratio of mental age to chronological age x 100. So, if an individual of 10 years of age has a mental age of 10, the IQ will be 100. However, if the mental age is greater than the chronological age, eg, 12 rather than 10, the IQ will be 120. Similarly, if a mental age is lower than the chronological age, the IQ will be lower than 100.\n\n"
        "When current IQ tests were developed, the average score of the norming sample was defined as IQ 100 and standard deviations (SD) up or down are defined as, for example, 16 or 24 IQ points greater or less than 100. Mensa accepts individuals who score in the top 2%, ie, two SDs or more above the average. This would include those who score at or above 132 (Stanford-Binet) or 148 (Cattell). Mensa accepts many different tests, as long as they have been standardised and normed and are accepted by professional psychologists’ associations.\n\n"
    </string>
    <string name="mensa_principles_1">
        "   Mensa International has a Constitution which sets out the purpose and infrastructure of Mensa. There are three aims:\n\n"
    </string>
    <string name="mensa_principles_2">
        "   - to identify and foster human intelligence for the benefit of humanity;\n\n"
        "   - to encourage research into the nature, characteristics, and uses of intelligence; \n\n"
        "   - to provide a stimulating intellectual and social environment for its members. \n\n"
    </string>
    <string name="mensa_principles_3">
        "   Each country has its own national Mensa constitution, which is based on Mensa's Minimum Constitutional Requirements, the document that lays out the basic requirements for all national Mensas, although national legal requirements take precedence, of course. The Mensa Constitution is the over-arching document that governs all national Mensa groups.\n\n"
    </string>
    <string name="what_is_mensa">What is Mensa</string>
    <string name="what_are_mensa_s_goals">What are Mensa\'s goals?</string>
    <string name="how_many_members_does_mensa_have">How many members does Mensa have?</string>
    <string name="what_kind_of_people_are_members_of_mensa">What kind of people are members of Mensa?</string>
    <string name="what_opinions_does_mensa_have">What opinions does Mensa have?</string>
    <string name="what_does_mensa_mean">What does \'Mensa\' mean?</string>
    <string name="how_do_i_qualify_for_mensa">How do I qualify for Mensa?</string>
    <string name="how_do_i_get_proof_of_my_previous_test_scores">How do I get proof of my previous test scores?</string>
    <string name="the_society">The Society</string>
    <string name="our_members">Our Members</string>
</resources>