<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/AboutMensaRomaniaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/simple_button"
            android:text="@string/about_mensa_romania"
            android:stateListAnimator="@null"
            android:elevation="20dp"
            />

        <Button
            android:id="@+id/WhatIsIQButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_does_iq_mean"
            android:stateListAnimator="@null"
            android:elevation="20dp"/>

        <Button
            android:id="@+id/AboutIQTestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_iq_test"
            android:stateListAnimator="@null"
            android:elevation="20dp"/>

        <Button
            android:id="@+id/AboutMensaInternationalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_mensa_internationl"
            android:stateListAnimator="@null"
            android:elevation="20dp"/>

        <Button
            android:id="@+id/TakeFreeTestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_free_sample_iq_test"
            android:stateListAnimator="@null"
            android:elevation="20dp"/>

    </LinearLayout>


</ScrollView>